force-app/main/default/objects/Base_Price__c/Base_Price__c.object-meta.xml
<CustomObject>
    <description>Lookup Table for Item based Pricing</description>
    <label>Base Price</label>
    <nameField>
        <label>Base Price Entry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Base Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>