force-app/main/default/objects/Base_Price__c/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>