force-app/main/default/objects/Base_Price__c/fields/BatchPrice__c.field-meta.xml
<CustomField>
    <fullName>BatchPrice__c</fullName>
    <label>Batch Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>