force-app/main/default/objects/Base_Price__c/fields/CostMultiplier__c.field-meta.xml
<CustomField>
    <fullName>CostMultiplier__c</fullName>
    <label>Cost Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>