force-app/main/default/objects/Base_Price__c/fields/CostType__c.field-meta.xml
<CustomField>
    <fullName>CostType__c</fullName>
    <label>Cost Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>