force-app/main/default/objects/Base_Price__c/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <label>Delivery Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>