force-app/main/default/objects/Base_Price__c/fields/Emphasis__c.field-meta.xml
<CustomField>
    <fullName>Emphasis__c</fullName>
    <label>Emphasis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>