force-app/main/default/objects/Base_Price__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <label>isActive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>