force-app/main/default/objects/Base_Price__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <label>Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>