force-app/main/default/objects/Base_Price__c/fields/ItemCode__c.field-meta.xml
<CustomField>
    <fullName>ItemCode__c</fullName>
    <label>Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>