force-app/main/default/objects/Base_Price__c/fields/MaintoriId__c.field-meta.xml
<CustomField>
    <fullName>MaintoriId__c</fullName>
    <externalId>true</externalId>
    <label>Maintori Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>