force-app/main/default/objects/Base_Price__c/fields/ManualProcessing__c.field-meta.xml
<CustomField>
    <fullName>ManualProcessing__c</fullName>
    <label>Manual Processing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>