force-app/main/default/objects/Base_Price__c/fields/MinumumPrice__c.field-meta.xml
<CustomField>
    <fullName>MinumumPrice__c</fullName>
    <label>Minumum Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>