force-app/main/default/objects/Base_Price__c/fields/Salestori_Id__c.field-meta.xml
<CustomField>
    <fullName>Salestori_Id__c</fullName>
    <externalId>true</externalId>
    <label>Salestori Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>