force-app/main/default/objects/Base_Price__c/fields/SalestoriId__c.field-meta.xml
<CustomField>
    <fullName>SalestoriId__c</fullName>
    <externalId>true</externalId>
    <label>Salestori Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>