force-app/main/default/objects/Base_Price__c/fields/SiteDiscount__c.field-meta.xml
<CustomField>
    <fullName>SiteDiscount__c</fullName>
    <label>Site Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>