force-app/main/default/objects/Base_Price__c/fields/VolumeDiscount__c.field-meta.xml
<CustomField>
    <fullName>VolumeDiscount__c</fullName>
    <label>Volume Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>