force-app/main/default/objects/Base_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Salestori_Id__c</columns>
    <columns>Maintori_Id__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Variant__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Name__c</columns>
    <columns>Unit_Of_Measure__c</columns>
    <columns>Item_Code__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>